# rust-halcon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
rhalcon-generator/: Cargo.toml  build.rs
rust-halcon-lib/: Cargo.toml  build.rs
rust-halcon-lib/header/: wrapper.h
rust-halcon-lib/libs/: halconc.lib
rust-halcon-lib/src/: bindings.rs  lib.rs
src/: bindings.rs  lib.rs
